# X-cli

./: .gitignore  CHANGELOG.md  README.md  example.env  main.py  pyproject.toml
.cursor/rules/: brainstorming.mdc  general.mdc
.github/workflows/: release.yml
birdapp/: auth.py  config.py  main.py  oauth2.py  session.py  tweet.py  utils.py
birdapp/storage/: __init__.py  dates.py  db.py  embeddings.py  importer.py  models.py  search.py
tests/: capture_oauth2_fixtures.py  capture_oauth2_refresh_fixtures.py  test_archive_importer.py  test_auth_cli.py  test_config_show_oauth2_scopes.py  test_embeddings.py  test_embeddings_config_cli.py  test_import_archive_cli.py  test_oauth2.py  test_profiles.py  test_search_cli.py  test_session_profiles.py  test_sessions_dir.py  test_storage_dates.py  test_storage_search.py  test_tweet_cli.py  test_tweet_cli_oauth2_login_instructions.py  test_tweet_oauth2.py  test_twitter_zip_importer.py
x_bot/: auth.py  llm.py  session.py  tweet.py
x_cli/: auth.py  config.py  main.py  oauth2.py  session.py  tweet.py  user.py
x_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
x_cli/storage/: __init__.py  db.py  importer.py  models.py
