[project]
name = "x-cli"
version = "0.1.0"
description = "A CLI tool for generating and posting tweets using LLMs and the Twitter/X API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests-oauthlib>=1.3.1",
    "requests>=2.32.3",
]

[project.scripts]
x-cli = "x_cli.main:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "types-requests>=2.32.4.20250809",
]
