[project]
name = "x-cli"
version = "0.1.0"
description = "A CLI tool for generating and posting tweets using LLMs and the Twitter/X API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests-oauthlib>=1.3.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.31",
]

[project.scripts]
x-cli = "x_cli.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "ty>=0.0.13",
    "types-requests>=2.32.4.20250809",
]
